--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>my name is kartik</h1>
+    <h2>my qualification<h2>
+        <p>b.scIT studennt sem 2<p>
 </body>
 </html>
